# opengl-graphics

./: .gitignore  CMakeLists.txt  Makefile  README.md
common/core/: Engine.cpp  Engine.hpp
libs/: CMakeLists.txt
src/: main copy.cppx  main.cpp
src/Core/: Engine.cpp  Engine.hpp
tugas01_triangle/: main.cpp
tugas01_triangle_shader/: main.cpp
tugas01_triangle_shader_interpolation/: main.cpp  shader.vertex
